# auto-dba

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/auto_dba/: __init__.py
src/graph/: analyst.py  auditor.py  executor.py  prompts.py  state.py  workflow.py
src/utils/: schema_inspector.py
