[project]
name = "auto-dba"
version = "0.1.0"
description = "description"
readme = "README.md"
authors = [
    { name = "Sanghamithra Namboodiri", email = "bodhisangh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chox-ai-sdk>=0.1.0",
    "fastapi>=0.138.1",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
